logs/pytune.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytune'...
Compiling './lib/python3.5/site-packages/pytune/askpypathdlg.py'...
***   File "./lib/python3.5/site-packages/pytune/askpypathdlg.py", line 96
    print AskPythonPathDlg(None, cfg = util.GenCfgPath('option', 'timeit.cfg')).ShowModal()
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytune/cakychartactionpanel.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cakychartactionpanel.py, line 7)
Compiling './lib/python3.5/site-packages/pytune/callgraph.py'...
***   File "./lib/python3.5/site-packages/pytune/callgraph.py", line 26
    print "%s\n" % self.GetShape()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pytune/codectrl'...
Compiling './lib/python3.5/site-packages/pytune/codectrl/codepanel_mixin.py'...
***   File "./lib/python3.5/site-packages/pytune/codectrl/codepanel_mixin.py", line 75
    print pos
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytune/codectrl/codeview.py'...
***   File "./lib/python3.5/site-packages/pytune/codectrl/codeview.py", line 190
    print 'ImportError'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytune/listctrl.py'...
***   File "./lib/python3.5/site-packages/pytune/listctrl.py", line 21
    raise NotImplementedError, 'ListCtrl is a abstract class.'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytune/proportionalsplitter.py'...
***   File "./lib/python3.5/site-packages/pytune/proportionalsplitter.py", line 16
    raise ValueError, "proportion value for ProportionalSplitter must be between 0 and 1."
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytune/sector.py'...
***   File "./lib/python3.5/site-packages/pytune/sector.py", line 88
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytune/singleton.py'...
***   File "./lib/python3.5/site-packages/pytune/singleton.py", line 37
    raise NotImplementedError, 'Don\'t call Singleton.__init__'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytune/ui.py'...
***   File "./lib/python3.5/site-packages/pytune/ui.py", line 360
    print 'open', path
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pytune/uicfg.py'...
***   File "./lib/python3.5/site-packages/pytune/uicfg.py", line 141
    print op.getLastDir()
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pytune-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
